--- a/app/lib/src/localization/app_en.arb
+++ b/app/lib/src/localization/app_en.arb
@@ -1,5 +1,5 @@
 {
-  "appTitle": "robokru",
+  "appTitle": "Rob The Skai",
   "@appTitle": {
     "description": "The title of the application"
   }
